vc issuance guide

--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -106,7 +106,7 @@ for (const pfiDid of pfiDids) {
 Here, we skip offerings where the customer's VCs do not satisfy the Offering's requirements.
 However, your application may choose to include these in the matched Offerings and still present them to the customer, indicating that they'd need to obtain the necessary credentials to satisfy the Offering's requirements. 
 
-Your application could even apply for certain credentials on behalf of the customer, or issue credentials that you have the credibility to do so.
+Your application could even apply for certain credentials on behalf of the customer, or [issue credentials](/docs/web5/build/verifiable-credentials/vc-issuance) that you have the credibility to do so.
 
 ## Select Credentials that Satisfy Requirements
 
