--- a/site/docs/tbdex/wallet/get-offerings.mdx
+++ b/site/docs/tbdex/wallet/get-offerings.mdx
@@ -10,13 +10,20 @@ This can include exchange rates, minimum and maximum transaction sizes, and othe
 
 In other words, an Offering is a way of describing a financial product that a PFI is offering on a tbDEX network. 
 
-Let's say your customer, Alice, is looking to exchange USD for GBP.
+## Get Offerings from PFI
+
+```js
+const { data: offerings } = await TbdexHttpClient.getOfferings({ pfiDid: pfiDid });
+```
+
+
+## Find Matching Offerings
+
+Let's say your customer is looking to exchange USD for GBP.
 As a wallet application, you would loop through your list of PFIs and make a request to each to obtain their list of Offerings and determine if any offer this currency pair.
 You'd then provide a list of the matching Offerings to Alice, showing her the options available.
 
 Let's walk through how this is done.
-
-## Find Matching Offerings
 
 Given you have a list of PFIs on your network, you can check their Offerings for any matches:
 
