--- a/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
+++ b/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
@@ -2,15 +2,15 @@
 sidebar_position: 5
 ---
 
-# Anatomy of a PFI
+# Structuring Your PFI App
 
-To participate in a tbDEX network as a PFI, you’ll need to stand up a server that allows you to receive tbDEX protocol messages, process those messages, and provide an appropriate response. As a result, you’ll need these core components: 
+Every PFI on the tbDEX network is required to handle its end of the responsibilities as part of each [Message Type](/docs/tbdex/message-types). The tbDEX SDK is organized in such a way that there are three key components you'll be required to implement:
 
 * **A main server entry point** - this will leverage the tbDEX SDK to create an http server subscribed to tbDEX messaging.
 
 * **An exchange API provider** - this class is responsible for implementing the ExchangeApi protocol, which is a common interface for managing the database containing your tbDEX offer, order, quote, close, and RFQ data.
 
-* **An offering API provider** - this class is responsible for implementing the OfferingsApi protocol, which is a common interface for managing the database containing your offerings data.
+* **An offering API provider** - this class is responsible for implementing the OfferingsApi protocol, which is a common interface for managing the database containing your offerings data. When a Wallet queries your PFI for Offerings, the tbDEX SDK will use the interfaces in this class to automatically handle returning Offerings from your database to the Wallet.
 
 
 ## Main Server Entrypoint
@@ -139,3 +139,5 @@ async create(offering: Offering) {
       });
   }
 ```
+
+By filling out an implementation for the `getOffering()` and `getOfferings()` methods, you'll allow Wallets to get a specific offering they'd be interested in or query all your offerings, respectively. The convenience of the tbDEX SDK is that you aren't required to actually write an API endpoint yourself to handle interfacing with Wallets as the SDK handles it all for you.
