--- a/site/docs/tbdex/pfi/creating-offerings.mdx
+++ b/site/docs/tbdex/pfi/creating-offerings.mdx
@@ -153,11 +153,11 @@ For a full breakdown of all the available fields and combinations, [see the DIF 
 }
 ```
 
-
-
 ## Sample Offering
 
-```js
+When combining all the data above, you can end up with a full Offering object that looks something like the following:
+
+```json
 {
   "metadata": {
     "from": "did:ex:pfi",
@@ -258,6 +258,5 @@ For a full breakdown of all the available fields and combinations, [see the DIF 
   "signature": "eyJhbGciOiJFZERTQSIsImtpZCI6ImRpZDprZXk6ejZNa2syc1QyZUtvQWdUUTdzWjY3YTdmRDMzR21jYzZ1UXdaYmlxeWF5Rk1hYkhHI3o2TWtrMnNUMmVLb0FnVFE3c1o2N2E3ZkQzM0dtY2M2dVF3WmJpcXlheUZNYWJIRyJ9..9EBTL3VcajsQzSNOm8GElhcwvYcFGaRp24FTwmC845RCF84Md-ZB-CxdCo7kEjzsAY8OaB55XFSH_8K9vedhAw"
 }
 ```
-
 
 Once the Offering has been generated, you can store it in your database using code as shown in the [Exchange API Provider section](/docs/tbdex/pfi/anatomy-of-a-pfi#exchange-api-provider).
