Add link to tbDEX Overview in PFI section

--- a/site/docs/tbdex/pfi/overview.mdx
+++ b/site/docs/tbdex/pfi/overview.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Overview
+# PFI Overview
 
 PFIs are **Participating Financial Institutions** that offer liquidity on a tbDEX network. 
 
@@ -14,10 +14,11 @@ The PFI guides are intended to provide you with what you need to begin participa
 
 ## Recommended Path
 
-1. [Review Message Types](/docs/tbdex/message-types)
-2. [Install Required SDKs](/docs/tbdex/pfi/required-sdks)
-3. [Onboard as a PFI](/docs/tbdex/pfi/onboarding)
-4. [Review Anatomy of a PFI](/docs/tbdex/pfi/anatomy-of-a-pfi)
-5. [Create Offerings](/docs/tbdex/pfi/creating-offerings)
-6. [Create Quotes](/docs/tbdex/pfi/creating-quotes)
-7. [Process Orders](/docs/tbdex/pfi/processing-orders)
+1. [tbDEX Overview](/docs/tbdex/)
+2. [Review Message Types](/docs/tbdex/message-types)
+3. [Install Required SDKs](/docs/tbdex/pfi/required-sdks)
+4. [Onboard as a PFI](/docs/tbdex/pfi/onboarding)
+5. [Review Anatomy of a PFI](/docs/tbdex/pfi/anatomy-of-a-pfi)
+6. [Create Offerings](/docs/tbdex/pfi/creating-offerings)
+7. [Create Quotes](/docs/tbdex/pfi/creating-quotes)
+8. [Process Orders](/docs/tbdex/pfi/processing-orders)
