--- a/site/docs/tbdex/wallet/overview.mdx
+++ b/site/docs/tbdex/wallet/overview.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Overview
+# Wallet Overview
 
 Wallet applications serve as agents in facilitating exchanges for individuals seeking liquidity within the tbDEX network. 
 These applications leverage the tbDEX protocol to establish and manage a curated network of [Participating Financial Institutions (PFIs)](/docs/tbdex/pfi/overview). 
