update example properties

--- a/site/docs/tbdex/pfi/creating-offerings.mdx
+++ b/site/docs/tbdex/pfi/creating-offerings.mdx
@@ -101,12 +101,12 @@ When structuring your `requiredPaymentDetails` object, it will look similar to t
     "properties": {
       "property1": {
         "type": "string",
-        "description": "A description of the first property",
+        "description": "Credit Card Number",
         "property1MaxLength": 16,
       },
       "property2": {
         "type": "string",
-        "description": "A description of the first property",
+        "description": "Card Expiration Date in MM/YY Format",
         "patternToMatch": "^(0[1-9]|1[0-2])\\/([0-9]{2})$"
       }
     }
