Restructure troubleshooting menu (#1108)
* Restructure troubleshooting menu

* update broken links

* Update menu location

--- a/site/docs/web5/troubleshooting/next.mdx
+++ b/site/docs/web5/troubleshooting/next.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 2
+sidebar_position: 3
 ---
 
 # Next.js
@@ -125,4 +125,4 @@ If you encounter errors similar to the above structure, ensure your node version
 }, []);
 ```
 
-If you run into any errors, check out our [troubleshooting guide](/docs/web5/troubleshooting-guide).
+If you run into any errors, check out our [troubleshooting guide](./common-errors).
