--- a/site/docs/web5/troubleshooting/vue.mdx
+++ b/site/docs/web5/troubleshooting/vue.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 ---
 
 import PackageJson from '@site/src/components/PackageJson';
@@ -96,4 +96,4 @@ export default defineConfig({
 
 ```
 
-If you run into any errors, check out our [troubleshooting guide](/docs/web5/troubleshooting-guide) for a possible solution.
+If you run into any errors, check out our [troubleshooting guide](./common-errors) for a possible solution.
