--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -403,13 +403,6 @@ Deletes a record stored in the user's local DWN, remote DWN, or another party's 
 
 
 #### Code Example
-```js
-const response = await web5.dwn.records.delete({
-  from: 'did:example:alice',
-  message: {
-    recordId: 'bfw35evr6e54c4cqa4c589h4cq3v7w4nc534c9w7h5'
-  }
-});
-```
+<CodeSnippet functionName='deleteRecord' />
 
 </section>
